# cmake_tui

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: app.rs  main.rs  parser.rs  tui_drawer.rs
